<resources>
    <string name="app_name">Travel Mate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gasstation_activity">gasstation_activity</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyz.0123456789@</string>
    <string name="password">abcdefghijklmnopqrstuvwxyz0123456789@_!#$.%*^ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="passerrormsg">password must have at least one special character,one capital letter,one small letter</string>
    <string name="emailerrormsg">Email pattern is not correct</string>
    <string name="emailempty">Email Field Can not be empty</string>
    <string name="passwordempty">Password Field Can not be empty</string>
    <string name="regesxpassword"><![CDATA[^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&])(?=\\S+$).{4,}$]]></string>
    <string name="loggingprogress">Logging..Wait...</string>
    <string name="serverid">15256756336-al3ol53pi194ui41kbiepo3jsc7vg6jb.apps.googleusercontent.com</string>
    <string name="namepattern">Pattern of name is not correct</string>
    <string name="alphabetnumber">abcdefghijklmnopqrstuv wxyz0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="selectrating">please select a rating</string>
    <string name="rate_this_place">Love this place ! Rate Place</string>
    <string name="view_ratings">View Place Reviews and Ratings</string>
    <string name="hide_rating">Hide Review</string>
    <string name="available_cabs">Available Cabs Will Be Show Here</string>
    <string name="deleteaccount">Alert ! By performing this action your account is permanently deleted and do not be restore again.Do you really want to delete your account?.</string>
    <string name="client_id">HGoX_WnTounjX2waJVsFZqG5eY2PEoHH</string>
    <string name="client_secret">LtAAB-wp5R7bqa2ST8JYCvUaaBpPXpyfouEeRWXK</string>

    <string name="redirect_uri">travelmate://oauth/callback</string>
    <string name="server_token">MtfVUKXStNDY29eXd8_G72YupVSnnxZsE9LtlQOU</string>
    <string name="next_step">Next Step</string>
    <string name="tripsuccessfully">Trip Created Successfully And Remainder Set</string>
    <string name="msgcab">please select source and destination and enter in order</string>
    <string name="near_by_attraction">Near By Attraction</string>
    <string name="GPSAlertDialogTitle">Enable Gps of device</string>
    <string name="GPSAlertDialogMessage">You have to enable device Gps to use this application</string>
    <string name="cancel">Cancel</string>
    <string name="atm">ATM</string>
    <string name="hospitals">Hospitals</string>
    <string name="number">0123456789</string>
    <string name="food">Food</string>
    <string name="hotels">Hotels</string>
    <string name="parking">Parking</string>
    <string name="bus_station">Bus Station</string>
    <string name="shopping">Shopping</string>
    <string name="googlesignin">Google Login In...</string>
    <string name="registering">Registering...Wait..</string>
    <string name="registeragian">User Profile is not complete,Please Register Agian</string>
    <string name="location_not_accessible">location not accessible</string>

</resources>
